chore: update delete connection endpoint
