# cmd/server/main.go
@@ -328,6 +328,7 @@ func run() error {
 			r.Get("/", connectAPIHandler.ListIntegrations)
 			r.Post("/{id}/connect-session", connectAPIHandler.CreateIntegrationConnectSession)
 			r.Post("/{id}/connections", connectAPIHandler.CreateIntegrationConnection)
+			r.Delete("/{id}/connections/{connectionId}", connectAPIHandler.DeleteIntegrationConnection)
 		})
 		r.Get("/connections", connectAPIHandler.ListConnections)
 		r.Post("/connections", connectAPIHandler.CreateConnection)
